--- a/index.html
+++ b/index.html
@@ -217,18 +217,14 @@
         </div>
     </div>
 
-    <section class="jumbotron">
+    <section class="example">
         <div class="container">
             <p class="lead">
                 Just to show the problem with microservice configuration more explicitly.
                 Below are typical configs that we have to support nowadays. 2 different microservices
                 with their <code>dev</code> and <code>prod</code> configs.
-            </p>
-        </div>
-    </section>
+            </p><br/>
 
-    <section class="example bg-light">
-        <div class="container">
             <div class="col text-right">
                 <div class="row-with-switch">
                     <label for="toggle1">dev</label>
@@ -447,14 +443,11 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="jumbotron">
-        <div class="container">
+            <br/>
             <p class="lead">
                 This might not look scary for only 2 services, but what if you have to manage 50 of them with additional
                 <code>test</code> and <code>staging</code> environments? Check out <a href="features.html">Features</a>
-                to see how Microconfig can scale your project to those numbers easily.
+                to see how Microconfig can help your project scale up.
             </p>
         </div>
     </section>
@@ -467,8 +460,7 @@
         <div class="contacts">
             <ul class="list-unstyled mb-0">
                 <li class="lead">Join our
-                    <a
-                            href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
+                    <a href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
                 </li>
                 <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
                 <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
