Added mobile version

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
     </div>
 
-    <section class="example">
+    <section class="example jumbotron">
         <div class="container">
             <p class="lead">
                 Just to show the problem with microservice configuration more explicitly.
