--- a/features.html
+++ b/features.html
@@ -493,8 +493,9 @@
                             <div class="col-md-12 col-lg-6">
                                 <h4>Solution</h4>
                                 <p>Microconfig can use static templates and populate them with data unique for each
-                                    service via placeholders. So you can keep your template in one place and then
-                                    generate specific result for each service. </p>
+                                    service via placeholders and <a href="https://mustache.github.io/">Moustache</a>. So you can
+                                    keep your template in one place and then generate specific result for each service.
+                                </p>
                                 <br/>
                             </div>
                         </div>
