--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
 
             <div class="col text-right">
                 <div class="row-with-switch">
-                    <label for="toggle1">dev</label>
+                    <label for="toggle1"><code>application config: </code> dev</label>
                     <input type="checkbox" id="toggle1" class="toggle">
                     <label for="toggle1">prod</label>
 
                     <div class="row equal-cols">
                         <div class="col-md-6 prod">
-                            <p class="code-title"><code>payment-backend application config</code></p>
+                            <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                             <code class="lang-yaml">
                                 name: payment-backend
@@ -257,7 +257,7 @@
                         </div>
 
                         <div class="col-md-6 prod">
-                            <p class="code-title"><code>payment-frontend application config</code></p>
+                            <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                             <code class="lang-yaml">
                                 name: payment-frontend
@@ -280,7 +280,7 @@
                         </div>
 
                         <div class="col-md-6 dev">
-                            <p class="code-title"><code>payment-backend application config</code></p>
+                            <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                             <code class="lang-yaml">
                                 name: payment-backend
@@ -304,7 +304,7 @@
                         </div>
 
                         <div class="col-md-6 dev">
-                            <p class="code-title"><code>payment-frontend application config</code></p>
+                            <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                             <code class="lang-yaml">
                                 name: payment-frontend
@@ -329,14 +329,14 @@
                 </div>
                 <!--//////////////////////////////////////////////////////////////////////////-->
                 <div class="row-with-switch">
-                    <label for="toggle2">dev</label>
+                    <label for="toggle2"><code>deploy config: </code>dev</label>
                     <input type="checkbox" id="toggle2" class="toggle">
                     <label for="toggle2">prod</label>
 
                     <div class="row equal-cols">
 
                         <div class="col-md-6 prod">
-                            <p class="code-title"><code>payment-backend deploy config</code></p>
+                            <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                             <code class="lang-yaml">
                                 image: "payment-backend:1.5"
@@ -354,7 +354,7 @@
                         </div>
 
                         <div class="col-md-6 prod">
-                            <p class="code-title"><code>payment-frontend deploy config</code></p>
+                            <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                             <code class="language-yaml">
                                 image: "payment-frontend:2.1"
@@ -372,7 +372,7 @@
                         </div>
 
                         <div class="col-md-6 dev">
-                            <p class="code-title"><code>payment-backend deploy config</code></p>
+                            <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                             <code class="lang-yaml">
                                 image: "payment-backend:latest"
@@ -390,7 +390,7 @@
                         </div>
 
                         <div class="col-md-6 dev">
-                            <p class="code-title"><code>payment-frontend deploy config</code></p>
+                            <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                             <code class="lang-yaml">
                                 image: "payment-frontend:latest"
@@ -410,13 +410,13 @@
                 </div>
                 <!--//////////////////////////////////////////////////////////////////////////-->
                 <div class="row-with-switch">
-                    <label for="toggle3">dev</label>
+                    <label for="toggle3"><code>log config: </code>dev</label>
                     <input type="checkbox" id="toggle3" class="toggle">
                     <label for="toggle3">prod</label>
 
                     <div class="row equal-cols">
                         <div class="col-md-6 dev">
-                            <p class="code-title"><code>payment-backend log config</code></p>
+                            <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
@@ -431,7 +431,7 @@
                             </pre>
                         </div>
                         <div class="col-md-6 prod">
-                            <p class="code-title"><code>payment-backend log config</code></p>
+                            <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
@@ -447,7 +447,7 @@
                         </div>
 
                         <div class="col-md-6 dev">
-                            <p class="code-title"><code>payment-frontend log config</code></p>
+                            <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
@@ -462,7 +462,7 @@
                             </pre>
                         </div>
                         <div class="col-md-6 prod">
-                            <p class="code-title"><code>payment-frontend log config</code></p>
+                            <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
