--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="container">
             <p class="lead">
                 Just to show the problem with microservice configuration more explicitly.
-                Below are typical configs that we have to support nowadays. 2 different microservices
+                Below are typical configs that we have to support nowadays. <br/> 2 different microservices
                 with their <code>dev</code> and <code>prod</code> configs.
             </p><br/>
 
