--- a/features.html
+++ b/features.html
@@ -447,7 +447,7 @@
                                         payment-gateway: http://gateway-mock.local
 
                                         database:
-                                          url: jdbc:postgres://10.10.10.10:5432/database
+                                          host: 10.10.10.10
                                     </code></pre>
                                 </div>
                                 <div class="col-md-6 on">
@@ -456,8 +456,8 @@
                                         payment-gateway: https://payment-gateway.com
 
                                         database:
+                                          host: 20.20.20.20
                                           pool-size: 50
-                                          url: jdbc:postgres://20.20.20.20:5432/database
                                     </code></pre>
                                 </div>
                             </div>
@@ -470,6 +470,7 @@
                                         database:
                                           type: Postgres
                                           pool-size: 10
+                                          url: jdbc:postgres://${this@database.host}:5432/database
                                     </code></pre>
                                 </div>
                             </div>
