--- a/features.html
+++ b/features.html
@@ -525,6 +525,13 @@
                                     <p class="code-title"><code>payment-backend log config prod</code></p>
                                     <pre><code class="lang-xml">
                                         &lt;configuration&gt;
+                                          &lt;appender class="FileAppender"&gt;
+                                            &lt;file&gt;logs/payment-backend.log&lt;/file&gt;
+                                            &lt;encoder&gt;
+                                              &lt;pattern&gt;%d{HH:mm:ss} %-5level %logger %msg %n&lt;/pattern&gt;
+                                            &lt;/encoder&gt;
+                                          &lt;/appender&gt;
+
                                           &lt;appender class=&quot;LogstashTcpSocketAppender&quot;&gt;
                                             &lt;destination&gt;30.30.30.30:9600&lt;/destination&gt;
                                             &lt;encoder class=&quot;LogstashEncoder&quot;&gt;
@@ -538,36 +545,34 @@
                                     <p class="code-title"><code>log template.xml</code></p>
                                     <pre><code class="language-xml">
                                         &lt;configuration&gt;
-                                        {{#appender.file}}
-                                          &lt;appender class="ch.qos.logback.core.FileAppender"&gt;
+                                          &lt;appender class="FileAppender"&gt;
                                             &lt;file&gt;logs/${this@name}.log&lt;/file&gt;
                                             &lt;encoder&gt;
-                                              &lt;pattern&gt;%d{HH:mm:ss.SSS} %-5level %logger{15} %msg %n&lt;/pattern&gt;
+                                              &lt;pattern&gt;%d{HH:mm:ss} %-5level %logger %msg %n&lt;/pattern&gt;
                                             &lt;/encoder&gt;
                                           &lt;/appender&gt;
-                                        {{/appender.file}}
-                                        {{^appender.file}}
+
+                                        {{#appender.stash}}
                                           &lt;appender class=&quot;LogstashTcpSocketAppender&quot;&gt;
                                             &lt;destination&gt;30.30.30.30:9600&lt;/destination&gt;
                                             &lt;encoder class=&quot;LogstashEncoder&quot;&gt;
                                               &lt;customFields&gt;{&quot;servicename&quot;:&quot;${this@name}&quot;}&lt;/customFields&gt;
                                             &lt;/encoder&gt;
                                           &lt;/appender&gt;
-                                        {{/appender.file}}
+                                        {{/appender.stash}}
                                         &lt;/configuration&gt;
                                     </code></pre>
                                 </div>
                                 <div class="col-md-6 on">
-                                    <p class="code-title"><code>payment-backend</code></p>
+                                    <p class="code-title"><code>payment-backend prod</code></p>
                                     <pre><code class="language-yaml">
                                         microconfig.mustache.log:
                                           fromFile: ${log@configDir}/template.xml
                                           toFile: logback.xml
 
-                                        #var appender.file: true
-
                                         name: payment-backend
 
+                                        #var appender.stash: true
                                         ...
                                     </code></pre>
                                 </div>
