--- a/features.html
+++ b/features.html
@@ -566,7 +566,7 @@
                                 <div class="col-md-6 on">
                                     <p class="code-title"><code>payment-backend prod</code></p>
                                     <pre><code class="language-yaml">
-                                        microconfig.mustache.log:
+                                        mc.mustache.log:
                                           fromFile: ${log@configDir}/template.xml
                                           toFile: logback.xml
 
