--- a/features.html
+++ b/features.html
@@ -570,6 +570,8 @@
                                           fromFile: ${log@configDir}/template.xml
                                           toFile: logback.xml
 
+                                        name: payment-backend
+
                                         #var appender.stash: true
                                         ...
                                     </code></pre>
