Added underline to menu-items

--- a/plugin.html
+++ b/plugin.html
@@ -77,7 +77,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="download.html">Download</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item nav-active">
                             <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
                         </li>
                         <li class="nav-item">
