--- a/features.html
+++ b/features.html
@@ -70,7 +70,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <li class="nav-item nav-active">
                         <a class="nav-link text-dark" href="features.html">Features</a>
                     </li>
                     <li class="nav-item">
