--- a/quickstart.html
+++ b/quickstart.html
@@ -72,7 +72,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="features.html">Features</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item nav-active">
                             <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
                         </li>
                         <li class="nav-item">
