--- a/index.html
+++ b/index.html
@@ -487,7 +487,8 @@
             <p class="lead">
                 This might not look scary for only 2 services, but what if you have to manage 50 of them with additional
                 <code>test</code> and <code>staging</code> environments? Check out <a href="features.html">Features</a>
-                to see how Microconfig can help your project scale up.
+                to see how Microconfig can help your project scale up or head over to <a href="quickstart.html">Quickstart</a>
+                to see Microconfig applied to this example.
             </p>
         </div>
     </section>
