update meta tag

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
     <meta content="microservice configuration, configuration, cloud native, cloud native configuration, kubernetes, helm, configuration management, external configuration, configuration processor, configuration management tools, application configuration"
           name="keywords">
-    <meta content="Microconfig is a modern and simple way to manage microservice configuration. Especially in the Cloud."
-          name="description">
+    <meta name="Description"
+          content="Microconfig is a modern and simple way to manage microservice configuration. Especially in the Cloud.">
     <link href="vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/prism/prism.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet">
